--- a/1 codepen_Intro_Exercise/css/styles.css
+++ b/1 codepen_Intro_Exercise/css/styles.css
@@ -3,11 +3,36 @@
     border-color: purple;
 }
 
+header  {
+    padding: 1%;
+    border: 5px dotted yellow;
+}
+
+
+
+h1 {
+    margin-left: 20px;
+    border: 4px solid skyblue;
+
+}
+
+article {
+    padding: 20px;
+    border: 4px dashed orange;
+}
+
 footer {
-    position: absolute;
-    bottom: 0px;
-    left: 0px;
+    width: 100%;
+    text-align: center;
+    border: 4px solid purple;
 }
-img {
+footer img {
     width: 40px;
+    border: 5px solid green;
 }
+/* Things you can do from here... */
+
+/* 1) delete all borders */
+/* 2) change background color in footer and header: */
+
+/* background-color: black; */
