--- a/1 codepen_Intro_Exercise/css/styles.css
+++ b/1 codepen_Intro_Exercise/css/styles.css
@@ -1,38 +1,46 @@
-
-.container {
-    border-color: purple;
-}
-
-header  {
-    padding: 1%;
-    border: 5px dotted yellow;
-}
-
-
-
-h1 {
-    margin-left: 20px;
-    border: 4px solid skyblue;
-
-}
-
-article {
-    padding: 20px;
-    border: 4px dashed orange;
-}
-
-footer {
-    width: 100%;
-    text-align: center;
-    border: 4px solid purple;
-}
-footer img {
-    width: 40px;
-    border: 5px solid green;
-}
-/* Things you can do from here... */
-
-/* 1) delete all borders */
-/* 2) change background color in footer and header: */
-
-/* background-color: black; */
+body {
+    background-color: grey;
+  }
+  
+  p {
+    margin-left: 40px;
+  }
+  
+  header  {
+    
+  }
+  
+  h1 {
+      margin-left: 20px;
+  /*     border: 4px solid skyblue; */
+  }
+  
+  article {
+      padding: 20px;
+  /*     border: 4px dashed orange; */
+  }
+  
+  article p {
+    font-size: 18px;
+    color: white;
+  }
+  
+  footer {
+      width: 100%;
+      text-align: center;
+  
+  }
+  footer img {
+      width: 40px;
+  
+  }
+  
+  /*****FURTHER DIRECTIONS**** (DON"T ERASE THIS) */
+  /* This page still looks ugly
+  Dont type any code yet, first just UNCOMMENT some of the lines of code above and see what happens to each part of the webpage */
+  
+  /* TRY TO... */
+  /* 1) delete all border styles */
+  /* 2) change background color in footer and header: */
+  /* background-color: black; */
+  
