finalized 1a commenting exercise

--- a/1a exercise for commenting/css/styles.css
+++ b/1a exercise for commenting/css/styles.css
@@ -1,11 +1,12 @@
-/* put yor cursur in the grey code & Simply press CTRL + / (the "?"-key) at the same time... */
-
 body {
-    /*   background-color: orange; */
-    }
-    
-    p {
-    /*   color: white; */
-    /*   font-size: 120px; */
-    /*   font-style: italic; */
-    }
+  /*   background-color: orange; */
+}
+
+p {
+  /*   color: white; */
+  /*   font-size: 120px; */
+  /*   font-style: italic; */
+}
+
+/* Here are some colors DONT UNCOMMENT THIS TEXT*/
+/* blue, green, orange, purple, yellow, black, orangered, coral, wheat, teal, pink, */
